--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
 	testCompile('io.rest-assured:rest-assured:4.3.1')
+    testCompile("org.json:json:20141113")
 }
 
 test {
